--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -234,10 +234,11 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
-LastLevel=/Game/Levels/MechanicsLevel
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2649,8 +2650,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character=
-Pawn=
+Character="\"Object.DashCooldown\" \"Object.DashCooldown\" "
+Pawn="\"Object.DashCooldown\" \"Object.DashCooldown\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2664,7 +2665,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
 Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C=
+TopDownCharacter_C="\"Object.DashCooldown\" \"Object.DashCooldown\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3551,20 +3552,20 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MechanicsLevel
-MRUItem1=/Game/c024816h/SmallHealthPotion
-MRUItem2=/Game/Chloe/UI/HUD_Proto
-MRUItem3=/Game/Widgets/Ability_Wheel
-MRUItem4=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
-MRUItem5=/Game/c024816h/LargeHealthPotion
-MRUItem6=/Game/c024816h/VitalityPotion
-MRUItem7=/Game/c024816h/BottledRage
-MRUItem8=/Game/c024816h/CurePotion
-MRUItem9=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
-MRUItem10=/Game/GW000979/BasicTeleporter/Teleport
-MRUItem11=/Game/StarterContent/Blueprints/Blueprint_Effect_Fire
-MRUItem12=/Game/AIAgent/AIbot
-MRUItem13=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem1=/Game/Levels/MechanicsLevel
+MRUItem2=/Game/c024816h/SmallHealthPotion
+MRUItem3=/Game/Chloe/UI/HUD_Proto
+MRUItem4=/Game/Widgets/Ability_Wheel
+MRUItem5=/Game/GW000979/DataStruct/BaseEquipment/BaseArmour
+MRUItem6=/Game/c024816h/LargeHealthPotion
+MRUItem7=/Game/c024816h/VitalityPotion
+MRUItem8=/Game/c024816h/BottledRage
+MRUItem9=/Game/c024816h/CurePotion
+MRUItem10=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem11=/Game/GW000979/BasicTeleporter/Teleport
+MRUItem12=/Game/StarterContent/Blueprints/Blueprint_Effect_Fire
+MRUItem13=/Game/AIAgent/AIbot
 MRUItem14=/Game/GW000979/Weapons/WeaponDropHuman
 MRUItem15=/Game/TopDownBP/Interactexample/Door
 MRUItem16=/Game/AIAgent/DerivedClasses/HybridAI
