ability stash, transfer

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -249,13 +249,16 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
-LastLevel=/Game/Levels/Demo
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/Chloe/UI/HUD_Proto.HUD_Proto
+OpenAssetsAtExit=/Game/Widgets/Ability_Wheel.Ability_Wheel
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2564,6 +2567,12 @@ BlockingVolume.Cooking=True
 BlockingVolume.BrushSettings=True
 BlockingVolume.Actor=True
 BasePickUp_C.TransformCommon=True
+TopDownGameMode_C.TransformCommon=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2714,8 +2723,8 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
@@ -2723,9 +2732,9 @@ Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Re
 ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Ability_Wheel_C="\"Object.Player Ref\" \"Object.Player Ref\" "
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Ability_Wheel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget=
+HUD_Proto_C=
 HybridController_C="\"Object.Default.DebugColour\" "
 BehaviorTreeGraphNode_Root=
 BehaviorTreeGraphNode=
@@ -2762,8 +2771,8 @@ Perception_C.Service=True
 BoxComponent.Collision=True
 
 [RootWindow]
-ScreenPosition=X=315.000 Y=155.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=597.000 Y=75.000
+WindowSize=X=716.000 Y=720.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3497,7 +3506,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -3574,26 +3583,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/TopDownBP/Interactexample/Door
-MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem3=/Game/GW000979/DataStruct/DataTables/TestItemTable
-MRUItem4=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
-MRUItem5=/Game/c024816h/Elixir
-MRUItem6=/Game/c024816h/VitalityPotion
-MRUItem7=/Game/c024816h/BottledRage
-MRUItem8=/Game/c024816h/BasePickUp
-MRUItem9=/Game/c024816h/LargeHealthPotion
-MRUItem10=/Game/GW000979/DataStruct/DataTables/WeaponDataHuman
-MRUItem11=/Game/GW000979/Weapons/WeaponDropHuman
-MRUItem12=/Game/SpawnActor/SpawnPoint
-MRUItem13=/Game/AIAgent/DerivedClasses/RangedAI
-MRUItem14=/Game/AIAgent/I_Projectile
-MRUItem15=/Game/AIAgent/Baseprojectile
-MRUItem16=/Game/T019847G/DeathZone
-MRUItem17=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem18=/Game/Levels/texturedzoo
-MRUItem19=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem0=/Game/Widgets/Ability_Wheel
+MRUItem1=/Game/Ability_Wheel
+MRUItem2=/Game/Chloe/UI/HUD_Proto
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem4=/Game/Levels/Demo
+MRUItem5=/Game/TopDownBP/Interactexample/Door
+MRUItem6=/Game/GW000979/DataStruct/DataTables/TestItemTable
+MRUItem7=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
+MRUItem8=/Game/c024816h/Elixir
+MRUItem9=/Game/c024816h/VitalityPotion
+MRUItem10=/Game/c024816h/BottledRage
+MRUItem11=/Game/c024816h/BasePickUp
+MRUItem12=/Game/c024816h/LargeHealthPotion
+MRUItem13=/Game/GW000979/DataStruct/DataTables/WeaponDataHuman
+MRUItem14=/Game/GW000979/Weapons/WeaponDropHuman
+MRUItem15=/Game/SpawnActor/SpawnPoint
+MRUItem16=/Game/AIAgent/DerivedClasses/RangedAI
+MRUItem17=/Game/AIAgent/I_Projectile
+MRUItem18=/Game/AIAgent/Baseprojectile
+MRUItem19=/Game/T019847G/DeathZone
 
 [WidgetTemplatesExpanded]
 Extra=False
