--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -172,7 +172,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Pause,
 SphereComponent=SphereComponent.Collision.Collision,
-TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
@@ -227,6 +227,8 @@ BasePickUp_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueC
 Calc Utlity Stats=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 CharacterMovementComponent=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+PostProcessVolume=PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Light Propagation Volume,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -250,13 +252,15 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/SpawnActor
+ContentBrowserTab1.SelectedPaths=/Game/Mannequin/Character/Materials
 
 [EditorStartup]
 LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/PlayerControl.PlayerControl
+OpenAssetsAtExit=/Game/c024816h/BasePickUp.BasePickUp
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2566,6 +2570,59 @@ BlockingVolume.BrushSettings=True
 BlockingVolume.Actor=True
 BasePickUp_C.TransformCommon=True
 Baseprojectile_C.Default=True
+REINST_TopDownCharacter_C_185.None=True
+REINST_TopDownCharacter_C_185.Tick=True
+REINST_TopDownCharacter_C_185.Character=True
+REINST_TopDownCharacter_C_185.Camera=True
+REINST_TopDownCharacter_C_185.Pawn=True
+REINST_TopDownCharacter_C_185.Rendering=True
+REINST_TopDownCharacter_C_185.Replication=True
+REINST_TopDownCharacter_C_185.Input=True
+REINST_TopDownCharacter_C_185.Actor=True
+TopDownCharacter3_C.Default=True
+TopDownCharacter3_C.Tick=True
+TopDownCharacter3_C.Character=True
+TopDownCharacter3_C.Camera=True
+TopDownCharacter3_C.Pawn=True
+TopDownCharacter3_C.Rendering=True
+TopDownCharacter3_C.Replication=True
+TopDownCharacter3_C.Input=True
+TopDownCharacter3_C.Actor=True
+TopDownCharacter3_C.Variable=True
+TopDownCharacter3_C.TransformCommon=True
+TopDownCharacter3_C.Sockets=True
+TopDownCharacter3_C.Animation=True
+TopDownCharacter3_C.Mesh=True
+TopDownCharacter3_C.Materials=True
+TopDownCharacter3_C.Clothing=True
+TopDownCharacter3_C.ClothingSimulation=True
+TopDownCharacter3_C.Physics=True
+TopDownCharacter3_C.Collision=True
+TopDownCharacter3_C.Lighting=True
+TopDownCharacter3_C.Tags=True
+TopDownCharacter3_C.ComponentReplication=True
+TopDownCharacter3_C.Activation=True
+TopDownCharacter3_C.Cooking=True
+TopDownCharacter3_C.Events=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Mobile Tonemapper=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
+PostProcessVolume.LOD=True
+PostProcessVolume.Cooking=True
+TopDownCharacter_C.Optimization=True
+TopDownCharacter_C.HLOD=True
+TopDownCharacter_C.AssetUserData=True
+TopDownCharacter_C.Mobile=True
+TopDownCharacter_C.SkeletalMesh=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -2585,7 +2642,7 @@ Baseprojectile_C.Default=True
 /Game/Geometry/Meshes/Grass.Grass=0
 /Game/TopDownBP/Blueprints/I_Detect.I_Detect=1
 /Game/TopDownBP/Blueprints/TopDownController.TopDownController=1
-/Game/TopDownBP/Interfaces/PlayerInt.PlayerInt=1
+/Game/TopDownBP/Interfaces/PlayerInt.PlayerInt=0
 /Game/TopDownBP/Blueprints/PlayerController.PlayerController=1
 /Game/AIAgent/ProtoTree.ProtoTree=0
 /Game/AIAgent/MOveToTarget.MoveToTarget=0
@@ -2650,6 +2707,9 @@ Baseprojectile_C.Default=True
 /Game/GW000979/DataStruct/DataTables/TestItemTable.TestItemTable=0
 /Game/GW000979/DataStruct/BaseEquipment/BaseAccessory.BaseAccessory=0
 /Game/T019847G/DeathZone.DeathZone=0
+/Game/c024816h/PickUpInterface.PickUpInterface=0
+/Game/c024816h/TopDownCharacter3.TopDownCharacter3=0
+/Game/Mannequin/Character/Materials/TempCharacterInst.TempCharacterInst=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2665,12 +2725,12 @@ ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
-Character=
-Pawn=
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C="\"Object.TargetEnemy\" \"Object.TargetEnemy\" "
@@ -2682,9 +2742,9 @@ AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Percept
 TestPawn_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
-Controller="\"Object.Default.DebugColour\" "
+Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C=
+TopDownCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2758,6 +2818,8 @@ BasePickUp_C=
 BaseShield_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
 Calc Utlity Stats="\"Struct.TempVitality\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+REINST_TopDownCharacter_C_236="\"Object.Character.Mesh.Object.Collision.BodyInstance\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3507,6 +3569,7 @@ LastLogListing=LoadErrors
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Game/c024816h/Elixir.Elixir;
 RecentlyPlaced=/Game/c024816h/VitalityPotion.VitalityPotion;
@@ -3526,7 +3589,6 @@ RecentlyPlaced=/Game/Models/Shannon/body_WIP.body_WIP;
 RecentlyPlaced=/Game/GW000979/BasicTeleporter/Teleport.Teleport;
 RecentlyPlaced=/Game/GW000979/BasicTeleporter/TeleportOut.TeleportOut;
 RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
-RecentlyPlaced=/Game/TopDownBP/Interactexample/Switch.Switch;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3577,26 +3639,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/Baseprojectile
-MRUItem1=/Game/T019847G/DeathZone
-MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem3=/Game/Levels/Demo
-MRUItem4=/Game/TopDownBP/Interactexample/Door
-MRUItem5=/Game/GW000979/DataStruct/DataTables/TestItemTable
-MRUItem6=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
-MRUItem7=/Game/c024816h/Elixir
-MRUItem8=/Game/c024816h/VitalityPotion
-MRUItem9=/Game/c024816h/BottledRage
-MRUItem10=/Game/c024816h/BasePickUp
-MRUItem11=/Game/c024816h/LargeHealthPotion
-MRUItem12=/Game/GW000979/DataStruct/DataTables/WeaponDataHuman
-MRUItem13=/Game/GW000979/Weapons/WeaponDropHuman
-MRUItem14=/Game/SpawnActor/SpawnPoint
-MRUItem15=/Game/AIAgent/DerivedClasses/RangedAI
-MRUItem16=/Game/AIAgent/I_Projectile
-MRUItem17=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem18=/Game/Levels/texturedzoo
-MRUItem19=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem0=/Game/Mannequin/Character/Materials/TempCharacterInst
+MRUItem1=/Game/c024816h/TopDownCharacter3
+MRUItem2=/Game/c024816h/PickUpInterface
+MRUItem3=/Game/c024816h/BasePickUp
+MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem5=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem6=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem7=/Game/Levels/Demo
+MRUItem8=/Game/AIAgent/Baseprojectile
+MRUItem9=/Game/T019847G/DeathZone
+MRUItem10=/Game/TopDownBP/Interactexample/Door
+MRUItem11=/Game/GW000979/DataStruct/DataTables/TestItemTable
+MRUItem12=/Game/GW000979/DataStruct/BaseEquipment/BaseAccessory
+MRUItem13=/Game/c024816h/Elixir
+MRUItem14=/Game/c024816h/VitalityPotion
+MRUItem15=/Game/c024816h/BottledRage
+MRUItem16=/Game/c024816h/LargeHealthPotion
+MRUItem17=/Game/GW000979/DataStruct/DataTables/WeaponDataHuman
+MRUItem18=/Game/GW000979/Weapons/WeaponDropHuman
+MRUItem19=/Game/SpawnActor/SpawnPoint
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -3718,5 +3780,45 @@ CustomFavorites=(FieldName="/Script/Engine.GameplayStatics:GetAllActorsOfClass",
 CustomFavorites=(NodeName="/Script/BlueprintGraph.K2Node_SpawnActorFromClass")
 CustomFavorites=(FieldName="/Script/Engine.KismetMathLibrary:GreaterEqual_FloatFloat",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
 CurrentProfile=CustomProfile
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
 
